--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "web-services",
+  "name": "lesson3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2"
+    "body-parser": "^1.18.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.16.3",
+    "mongodb": "^4.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^1.18.4"
+  },
+  "engines": {
+    "node": ">=14 <18.17.1"
   }
 }
